[gd_scene load_steps=2 format=3 uid="uid://bg2wq8rmhu2rx"]

[ext_resource type="Script" path="res://scripts/CombatUI.gd" id="1_combat_ui"]

[node name="CombatUI" type="CanvasLayer"]
script = ExtResource("1_combat_ui")

[node name="Panel" type="Panel" parent="."]
offset_left = 10.0
offset_top = 10.0
offset_right = 310.0
offset_bottom = 110.0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_top = 5.0
offset_right = -5.0
offset_bottom = -5.0
grow_horizontal = 2
grow_vertical = 2

[node name="HealthBar" type="ProgressBar" parent="Panel/VBoxContainer"]
layout_mode = 2
max_value = 100.0
value = 100.0
show_percentage = false

[node name="Label" type="Label" parent="Panel/VBoxContainer/HealthBar"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "100 / 100"
horizontal_alignment = 1

[node name="ManaBar" type="ProgressBar" parent="Panel/VBoxContainer"]
layout_mode = 2
max_value = 100.0
value = 100.0
show_percentage = false

[node name="Label" type="Label" parent="Panel/VBoxContainer/ManaBar"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "50 / 50"
horizontal_alignment = 1

[node name="SkillBar" type="Panel" parent="."]
offset_left = 10.0
offset_top = 650.0
offset_right = 410.0
offset_bottom = 710.0

[node name="HBoxContainer" type="HBoxContainer" parent="SkillBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_top = 5.0
offset_right = -5.0
offset_bottom = -5.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10
